// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-pagination-legacy #render should render component as expected (1) 1`] = `
<gux-pagination-legacy current-page="1" total-items="1000" items-per-page="25" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 25 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              25
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 1 of 40
                  </label>
                  <input type="text" slot="input" value="1">
                </gux-form-field-text-like>
              </div>
              <div>
                of 40
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (2) 1`] = `
<gux-pagination-legacy current-page="1" total-items="1000" items-per-page="50" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="1" items-per-page="50">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 50
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="50">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 50 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              50
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="20">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 1 of 20
                  </label>
                  <input type="text" slot="input" value="1">
                </gux-form-field-text-like>
              </div>
              <div>
                of 20
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (3) 1`] = `
<gux-pagination-legacy current-page="1" total-items="1000" items-per-page="75" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="1" items-per-page="75">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 75
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="75">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 75 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              75
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="14">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 1 of 14
                  </label>
                  <input type="text" slot="input" value="1">
                </gux-form-field-text-like>
              </div>
              <div>
                of 14
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (4) 1`] = `
<gux-pagination-legacy current-page="1" total-items="1000" items-per-page="100" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="1" items-per-page="100">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 100
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="100">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 100 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              100
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="10">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 1 of 10
                  </label>
                  <input type="text" slot="input" value="1">
                </gux-form-field-text-like>
              </div>
              <div>
                of 10
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (5) 1`] = `
<gux-pagination-legacy current-page="1" total-items="1000" items-per-page="25" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 25 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              25
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 1 of 40
                  </label>
                  <input type="text" slot="input" value="1">
                </gux-form-field-text-like>
              </div>
              <div>
                of 40
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (6) 1`] = `
<gux-pagination-legacy current-page="10" total-items="1000" items-per-page="25" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="10" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              226 - 250
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 25 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              25
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="10" total-pages="40">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 10 of 40
                  </label>
                  <input type="text" slot="input" value="10">
                </gux-form-field-text-like>
              </div>
              <div>
                of 40
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (7) 1`] = `
<gux-pagination-legacy current-page="10" total-items="1000" items-per-page="50" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="10" items-per-page="50">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              451 - 500
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="50">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 50 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              50
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="10" total-pages="20">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 10 of 20
                  </label>
                  <input type="text" slot="input" value="10">
                </gux-form-field-text-like>
              </div>
              <div>
                of 20
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (8) 1`] = `
<gux-pagination-legacy current-page="10" total-items="1000" items-per-page="75" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="10" items-per-page="75">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              676 - 750
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="75">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 75 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              75
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="10" total-pages="14">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 10 of 14
                  </label>
                  <input type="text" slot="input" value="10">
                </gux-form-field-text-like>
              </div>
              <div>
                of 14
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (9) 1`] = `
<gux-pagination-legacy current-page="10" total-items="1000" items-per-page="100" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="10" items-per-page="100">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              901 - 1,000
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="100">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 100 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              100
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="10" total-pages="10">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 10 of 10
                  </label>
                  <input type="text" slot="input" value="10">
                </gux-form-field-text-like>
              </div>
              <div>
                of 10
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (10) 1`] = `
<gux-pagination-legacy current-page="1" total-items="1000" items-per-page="25" layout="small">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-small">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-spacer">
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (11) 1`] = `
<gux-pagination-legacy current-page="1" total-items="1000" items-per-page="25" layout="expanded">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-expanded">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button class="gux-pagination-buttons-list-button gux-current">
                1
              </button>
              <button class="gux-pagination-buttons-list-button gux-target">
                2
              </button>
              <button class="gux-pagination-buttons-list-button gux-target">
                3
              </button>
              <button class="gux-pagination-buttons-list-button gux-target">
                4
              </button>
              <button class="gux-pagination-buttons-list-button gux-target">
                5
              </button>
              <button class="gux-pagination-buttons-list-button gux-target">
                6
              </button>
              <button class="gux-pagination-buttons-list-button gux-target">
                ...
              </button>
              <button class="gux-pagination-buttons-list-button gux-target">
                40
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (12) 1`] = `
<gux-pagination-legacy current-page="-3" total-items="1000" items-per-page="25" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 25 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              25
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 1 of 40
                  </label>
                  <input type="text" slot="input" value="1">
                </gux-form-field-text-like>
              </div>
              <div>
                of 40
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (13) 1`] = `
<gux-pagination-legacy current-page="-3" total-items="1" items-per-page="25" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="1" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 1
            </span>
            <span>
              of 1
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 25 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              25
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="1">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 1 of 1
                  </label>
                  <input type="text" slot="input" value="1">
                </gux-form-field-text-like>
              </div>
              <div>
                of 1
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;

exports[`gux-pagination-legacy #render should render component as expected (14) 1`] = `
<gux-pagination-legacy current-page="1" total-items="0" items-per-page="25" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts-legacy total-items="0" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              0 - 0
            </span>
            <span>
              of 0
            </span>
          </div>
        </gux-pagination-item-counts-legacy>
        <gux-pagination-items-per-page-legacy items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown aria-label="Items per page dropdown, 25 selected">
                <template shadowrootmode="open" shadowrootdelegatesfocus>
                  <gux-popup>
                    <div class="gux-target-container-not-filterable" slot="target">
                      <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            <gux-truncate dir="auto">
                              25
                            </gux-truncate>
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                        </gux-icon>
                      </button>
                    </div>
                    <slot slot="popup">
                    </slot>
                  </gux-popup>
                </template>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <template shadowrootmode="open">
                    <slot>
                    </slot>
                  </template>
                  <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>25
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>50
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>75
                  </gux-option>
                  <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
                    <template shadowrootmode="open">
                      <div class="gux-option-wrapper">
                        <gux-truncate tooltip-placement="right">
                          <slot>
                          </slot>
                        </gux-truncate>
                        <slot name="subtext">
                        </slot>
                      </div>
                    </template>100
                  </gux-option>
                </gux-listbox>
              </gux-dropdown>
            </div>
            <div class="gux-pagination-per-page">
              per page
            </div>
          </div>
        </gux-pagination-items-per-page-legacy>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons-legacy current-page="1" total-pages="1">
          <div class="gux-pagination-buttons-container gux-full">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-form-field-text-like label-position="screenreader">
                  <label slot="label">
                    Page 1 of 1
                  </label>
                  <input type="text" slot="input" value="1">
                </gux-form-field-text-like>
              </div>
              <div>
                of 1
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next" disabled="">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last" disabled="">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons-legacy>
      </div>
    </div>
  </template>
</gux-pagination-legacy>
`;
